...
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    <android.support.design.widget.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:contentScrim="?attr/colorPrimary"
        app:titleEnabled="true">
        <include layout="@layout/view_main_header" />
...
                android:scaleType="center"
                android:tint="?attr/indicatorColor"
                app:srcCompat="@drawable/ic_menu" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.CollapsingToolbarLayout>
    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:tabGravity="fill"
        app:tabMode="scrollable"
        app:tabIndicatorColor="?attr/indicatorColor" />
...
