...
    </ViewSwitcher>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/text_protection_scrim" />
    <ImageView
        android:id="@+id/navigate_previous"
        android:layout_width="@dimen/navigation_indicator"
        android:layout_height="@dimen/navigation_indicator"
        android:layout_gravity="start|center_vertical"
        android:visibility="gone"
        android:contentDescription="@string/go_back"
        android:tint="?attr/indicatorColor"
        app:srcCompat="@drawable/ic_chevron_left" />
    <ImageView
        android:id="@+id/navigate_next"
        android:layout_width="@dimen/navigation_indicator"
        android:layout_height="@dimen/navigation_indicator"
        android:layout_gravity="end|center_vertical"
        android:visibility="gone"
        android:contentDescription="@string/go_next"
        android:tint="?attr/indicatorColor"
...
