<?xml version="1.0" encoding="utf-8"?>
<com.github.ayltai.newspaper.widget.SmartRecyclerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
