<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/action_news"
        title="@string/action_news"
        icon="@drawable/ic_news_black_24dp" />
    <tab
        id="@+id/action_history"
        title="@string/action_history"
        icon="@drawable/ic_history_black_24dp" />
    <tab
        id="@+id/action_bookmark"
        title="@string/action_bookmark"
        icon="@drawable/ic_bookmark_black_24dp" />
    <tab
        id="@+id/action_about"
        title="@string/action_about"
        icon="@drawable/ic_info_black_24dp" />
</tabs>
