...
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_anchor="@+id/content"
        app:layout_anchorGravity="end|bottom"
        app:layout_behavior="com.github.ayltai.newspaper.view.FloatingActionButtonBehavior">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMargin"
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_up_24dp"
...
            android:stateListAnimator="@animator/lift_on_pressed"
            android:visibility="invisible"
            app:srcCompat="?attr/ic_clear_all_24dp"
            app:fabSize="mini"
            app:backgroundTint="?attr/windowBackground" />
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/action_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fabMarginLarge"
            android:layout_gravity="end|bottom"
            android:stateListAnimator="@animator/lift_on_pressed"
            app:srcCompat="@drawable/ic_open_white_24dp"
...
