<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/windowBackground"
    android:fitsSystemWindows="true">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/cozy_avatar_size"
                    android:layout_height="@dimen/cozy_avatar_size"
                    android:layout_margin="@dimen/space16"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    app:placeholderImage="?attr/placeholderImage"
                    app:fadeDuration="@android:integer/config_shortAnimTime" />
                <TextView
                    android:id="@+id/source"
                    android:layout_toRightOf="@+id/avatar"
                    android:layout_toEndOf="@+id/avatar"
                    android:layout_alignTop="@+id/avatar"
                    android:layout_alignWithParentIfMissing="true"
                    android:textIsSelectable="true"
                    tools:text="Proin rutrum ipsum"
                    style="@style/Source.Full" />
                <TextView
                    android:id="@+id/publish_date"
                    android:layout_marginTop="@dimen/space4"
                    android:layout_toRightOf="@+id/avatar"
                    android:layout_toEndOf="@+id/avatar"
                    android:layout_below="@+id/source"
                    android:layout_alignWithParentIfMissing="true"
                    android:textIsSelectable="true"
                    tools:text="Phasellus at aliquam dolor"
                    style="@style/Subhead.Full" />
                <ImageView
                    android:id="@+id/action_text_to_speech"
                    android:layout_marginLeft="@dimen/space16"
                    android:layout_marginStart="@dimen/space16"
                    android:layout_marginTop="@dimen/space16"
                    android:layout_marginBottom="@dimen/space16"
                    android:layout_toLeftOf="@+id/smallBang"
                    android:layout_toStartOf="@+id/smallBang"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/action_text_to_speech"
                    android:tint="?attr/textColorHint"
                    app:srcCompat="@drawable/ic_volume_off_black_24dp"
                    style="@style/Icon.Small" />
                <xyz.hanks.library.bang.SmallBangView
                    android:id="@+id/smallBang"
                    android:layout_width="@dimen/iconLarge"
                    android:layout_height="@dimen/iconLarge"
                    android:layout_toLeftOf="@+id/action_view_on_web"
                    android:layout_toStartOf="@+id/action_view_on_web"
                    android:layout_alignParentTop="true">
                    <ImageView
                        android:id="@+id/action_bookmark"
                        android:layout_gravity="center"
                        android:contentDescription="@string/action_bookmark"
                        android:tint="?attr/textColorHint"
                        app:srcCompat="@drawable/ic_bookmark_border_black_24dp"
                        style="@style/Icon.Small"/>
                </xyz.hanks.library.bang.SmallBangView>
                <ImageView
                    android:id="@+id/action_view_on_web"
                    android:layout_marginRight="@dimen/space16"
                    android:layout_marginEnd="@dimen/space16"
                    android:layout_marginTop="@dimen/space16"
                    android:layout_marginBottom="@dimen/space16"
                    android:layout_toLeftOf="@+id/action_share"
                    android:layout_toStartOf="@+id/action_share"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/action_view_on_web"
                    android:tint="?attr/textColorHint"
                    app:srcCompat="@drawable/ic_launch_black_24dp"
                    style="@style/Icon.Small" />
                <ImageView
                    android:id="@+id/action_share"
                    android:layout_marginRight="@dimen/space16"
                    android:layout_marginEnd="@dimen/space16"
                    android:layout_marginTop="@dimen/space16"
                    android:layout_marginBottom="@dimen/space16"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/action_share"
                    android:tint="?attr/textColorHint"
                    app:srcCompat="@drawable/ic_share_black_24dp"
                    style="@style/Icon.Small" />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/title"
                    android:layout_marginBottom="@dimen/space16"
                    android:textIsSelectable="true"
                    tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit"
                    style="@style/Title.Full" />
                <TextView
                    android:id="@+id/description"
                    android:layout_marginBottom="@dimen/space16"
                    android:textIsSelectable="true"
                    android:autoLink="all"
                    tools:text="Sed eu rhoncus enim, sit amet iaculis ante. Sed at finibus lectus, at consequat lacus. Etiam ipsum erat, facilisis vel sagittis sed, scelerisque ut eros. Praesent at mauris laoreet, imperdiet urna imperdiet, sollicitudin erat. Etiam iaculis mauris eu libero dignissim mattis mollis vitae enim. Quisque nec semper arcu. Ut lobortis, justo vitae finibus tempus, mauris elit fermentum mi, at cursus leo nisi et dui. Phasellus turpis diam, mollis at elementum aliquet, ullamcorper in metus. In lobortis scelerisque ante in mollis. Curabitur eget efficitur massa."
                    style="@style/Description.Full" />
                <FrameLayout
                    android:id="@+id/video_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
                <LinearLayout
                    android:id="@+id/images_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/primaryColor"
            app:expandedTitleTextAppearance="@style/TransparentText">
            <FrameLayout
                android:id="@+id/image_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>
